fixing gap

--- a/src/components/Forms/CheckboxItemsList/checkboxItemsList.module.scss
+++ b/src/components/Forms/CheckboxItemsList/checkboxItemsList.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  gap: 0.5rem;
+  gap: 0.75rem;
   margin-bottom: 1rem;
 
   h4 {
